WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64073
DFG JIT method_check implementation does not link to optimized get_by_id slow path
https://bugs.webkit.org/show_bug.cgi?id=64073
Summary
DFG JIT method_check implementation does not link to optimized get_by_id slow...
Filip Pizlo
Reported
2011-07-07 01:33:38 PDT
The JSC JIT links the method_check slow path to the optimizing get_by_id slow path, so that if method_check patching fails, get_by_id can have a go. The DFG JIT does not do this, but should.
Attachments
the patch
(1.32 KB, patch)
2011-07-07 01:48 PDT
,
Filip Pizlo
barraclough
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
the patch
(1.33 KB, patch)
2011-07-07 15:43 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-07-07 01:48:23 PDT
Created
attachment 99957
[details]
the patch
WebKit Review Bot
Comment 2
2011-07-07 14:10:49 PDT
Comment on
attachment 99957
[details]
the patch Rejecting
attachment 99957
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-02', '--port..." exit_code: 2 Last 500 characters of output: 669ace4c5883549e2e26773acf636ef9b04f6685
r90589
= b4983f42a5417e5da321b861357482a455302b42 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/9000249
Filip Pizlo
Comment 3
2011-07-07 15:43:22 PDT
Created
attachment 100042
[details]
the patch
WebKit Review Bot
Comment 4
2011-07-07 16:07:54 PDT
Comment on
attachment 100042
[details]
the patch Clearing flags on attachment: 100042 Committed
r90598
: <
http://trac.webkit.org/changeset/90598
>
WebKit Review Bot
Comment 5
2011-07-07 16:07:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug