DFG JIT method_check implementation does not link to optimized get_by_id slow path. https://bugs.webkit.org/show_bug.cgi?id=64073

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-07
Reviewed by Gavin Barraclough.

* dfg/DFGRepatch.cpp:
(JSC::DFG::dfgRepatchGetMethodFast):

Canonical link: https://commits.webkit.org/79863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90598 268f45cc-cd09-0410-ab3c-d52691b4dbfc